# MagicCardScanner

./: .gitignore  README.md  config.toml  config_windows.toml  setup.cfg
cad/: scanner_base.scad  stream_cam_adapter.scad
src/magic_scanner/: __init__.py  decorators.py  image_ops.py  main_window.py  tesseract.py
src/magic_scanner/ui/: main.ui
src/magic_scanner/widgets/: __init__.py  _tk.py  camera_list.py  camera_viewfinder.py  control_pane.py  main_window.py  viewfinder.py
src/scanner/: __init__.py  image_ops.py  main_window.py
src/scanner/widgets/: camera_viewfinder.py
