[metadata]
name = mtg_card_scanner
version = 0.1
description = Tool to scan MTG cards
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mtg, magic the gathering
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = yes
package_dir=
    =src
packages = find:
install_requires =
    Pillow
    numpy
    opencv-python
    opencv-contrib-python # For img_hash
    toml


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    magic_scanner=magic_scanner:main